--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,41 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Python setup (for tests)
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install test dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements-test.txt
+
+      # SMOKE TESTS (fail fast)
+      - name: Run smoke tests
+        run: |
+          pytest pytest/smoke -v
+
+      # SANITY TESTS and HTML REPORT
+      - name: Run sanity tests
+        run: |
+          mkdir -p reports
+          pytest pytest/sanity -v \
+            --html=reports/sanity-report.html \
+            --self-contained-html
+
+      # Upload report
+      - name: Upload sanity test report
+        uses: actions/upload-artifact@v4
+        with:
+          name: sanity-html-report
+          path: reports/sanity-report.html
+
       - name: Debug region
         run: echo "AWS region is set"
 
+      # AWS auth (deploy only if tests passed)
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -23,6 +55,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      # Deploy to S3
       - name: Deploy static site to S3
         run: |
           aws s3 sync "Judicial Solutions/" s3://${{ secrets.S3_BUCKET }} \
@@ -30,6 +63,7 @@ jobs:
             --exclude ".git/*" \
             --exclude ".github/*"
 
+      # 🔄 CloudFront invalidation
       - name: Invalidate CloudFront cache
         run: |
           aws cloudfront create-invalidation \
