--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-# Terraform
+# Local .terraform directories
 .terraform/
+
+# .tfstate files
 *.tfstate
 *.tfstate.*
-.terraform.lock.hcl
+
+# Terraform modules
+.terraform/modules/
+
+# Provider binaries
+.terraform/providers/
+
